--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <!-- Ảnh tốt nghiệp -->
         <div class="image-container">
-            <img src="images/ThuHoang.jpg" alt="Ảnh lễ tốt nghiệp" class="graduation-image bounce">
-            <img src="icons/icon3.png" alt="Mũ tốt nghiệp" class="graduation-icon">
+            <img src="ThuHoang.jpg" alt="Ảnh lễ tốt nghiệp" class="graduation-image bounce">
+            <img src="icon3.png" alt="Mũ tốt nghiệp" class="graduation-icon">
         </div>
 
         <!-- Nội dung chính -->
