--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Thông tin buổi lễ -->
         <div class="info-section">
-            <h2 class="info-title">𝑻𝒉𝒐̂𝒏𝒈 𝑻𝒊𝒏 𝑩𝒖𝒐̂̉𝒊 𝑳𝒆̂̃ 📣</h2>
+            <h2 class="info-title">Thong tin buoi le 📣</h2>
             <p>⏰ <strong>Thời gian:</strong> 10:00AM, ngày 22.12.2024 (Chủ Nhật)</p>
             <p>📍 <strong>Địa điểm:</strong> Trường Đại học Khoa học Tự Nhiên <br>
             (277 Nguyễn Văn Cừ, Phường 4, Quận 5, TP.HCM)</p>
